Fix font sizes of card headlines on mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,6 +278,7 @@ hr {
 
       .question-card {
           padding: 30px 20px 30px;
+          font-size: 1.3rem;
       }
 
       .small-screen-card {
